--- a/P1_S1/nbproject/project.properties
+++ b/P1_S1/nbproject/project.properties
@@ -72,7 +72,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=P1_S1
-main.class=p1_s1.P1_S1
+main.class=p1_s1.Principal
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
