hecha la parte obligartoria

--- a/P1.3/P1.3_obligatorio/Makefile
+++ b/P1.3/P1.3_obligatorio/Makefile
@@ -1,9 +1,9 @@
 CXX	     := -g++
-CXXFLAGS := -std=c++11 -Wall -Wextra -Werror
+CXXFLAGS := -std=c++17 -Wall -Wextra -Werror
 LDFLAGS	 := -lstdc++ -lm
 BUILD 	 := ./
-OBJ_DIR  := $(BUILD)/obj
-APP_DIR  := $(BUILD)/
+OBJ_DIR  := $(BUILD)obj
+APP_DIR  := $(BUILD)
 TARGET   := app
 INCLUDE  := -Iinclude/
 SRC			 := $(wildcard src/*.cpp)
